--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ button {
   background-color: white;
   padding: 5px 10px;
 }
-button:hover {
+.active, button:hover {
   border: 0.5px solid #ecdcdc;
   border-radius: 3px;
 }
@@ -104,6 +104,10 @@ button:hover {
 .container p {
   padding-left: 10px;
 }
+.input__completed {
+  text-decoration: line-through;
+  color: lightgray;
+}
 .container__todo {
   display: flex;
 }
@@ -126,7 +130,7 @@ button:hover {
   font-size: 25px;
   font-weight: bold;
 }
-.container:hover .btn__del {
+.container ul li:hover .btn__del {
   color: #ecdcdc;
 }
 .container:hover .btn__del:hover {
