--- a/styles.css
+++ b/styles.css
@@ -10,24 +10,33 @@ body {
 }
 ul {
   list-style: none;
+  display: flex;
 }
-.fas {
+.fa-angle-down {
   padding: 0px 20px;
   color: lightgray;
+  visibility: hidden;
+}
+.fa-times {
+  padding: 0;
+  padding-right: 10px;
+  color: white;
+  font-size: 20px;
 }
 h1 {
   text-align: center;
   color: #ecdcdc;
   font-size: 100px;
 }
+/* header for adding an item*/
 header {
   margin: 20px auto;
-  margin-bottom: 5px;
+  margin-bottom: 1px;
   background-color: white;
   display: flex;
   align-items: center;
   width: 40%;
-  box-shadow: 0px 0px 5px 1px gray;
+  box-shadow: 0px 5px 30px 1px lightgray;
 }
 input {
   border: none;
@@ -43,111 +52,141 @@ input::placeholder {
 input:focus {
   outline: none;
 }
-.footer-bar {
-  margin: 0 auto;
-  padding: 10px 0px;
+/*contain items*/
+.container {
   width: 40%;
+  margin: 0 auto;
+}
+.container ul {
+  flex-wrap: wrap;
+}
+.container ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 10px;
+  border: none;
+  border-bottom: 1px solid lightgray;
+  width: 100%;
+  height: auto;
   background-color: white;
+}
+.container__todo {
+  display: flex;
+  align-items: center;
+}
+.container input {
+  padding: 15px 0px;
+  background-color: white;
+  margin-left: 40px;
+  display: none;
+}
+.container input:focus {
+  border: 1px solid gray;
+  box-shadow: 0px 0px 5px 1px lightgray;
+}
+.container p {
+  padding: 15px 10px;
+  margin-left: 30px;
+  word-break: break-all;
+}
+.container ul li:hover .fa-times {
+  color: #e2a4a6;
+}
+.container:hover .fa-times:hover {
+  border: none;
+  color: #af5b5e;
+}
+/* completed item */
+.completed__item {
+  color: lightgray;
+  text-decoration: line-through;
+}
+/* style rounded checkbox */
+.round {
+  position: relative;
+}
+.round label {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 28px;
+  left: 0;
+  position: absolute;
+  top: -15px;
+  width: 28px;
+}
+.round label:after {
+  border: 2px solid #66bb6a;
+  border-top: none;
+  border-right: none;
+  content: "";
+  height: 6px;
+  left: 7px;
+  opacity: 0;
+  position: absolute;
+  top: 8px;
+  transform: rotate(-45deg);
+  width: 12px;
+}
+
+.round input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.round input[type="checkbox"]:checked + label {
+  background-color: white;
+}
+
+.round input[type="checkbox"]:checked + label:after {
+  opacity: 1;
+}
+/* style footer-bar */
+.footer-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 10px 0px;
+  width: 40%;
+  background-color: white;
   font-size: 14px;
   color: gray;
+  display: none;
 }
-.footer-bar p {
+p {
   padding-left: 20px;
 }
-ul {
-  display: flex;
-}
+
 button {
   border: none;
   outline: none;
   background-color: white;
-  padding: 5px 10px;
+  padding: 5px 7px;
 }
-.active, button:hover {
+.mid {
+  margin: 0px 10px;
+}
+.active,
+button:hover {
   border: 0.5px solid #ecdcdc;
   border-radius: 3px;
 }
-.btn-clear:hover {
+.btn__clear:hover {
   border: none;
   text-decoration: underline;
 }
 .btn__clear {
   margin-right: 10px;
+  visibility: hidden;
 }
+/* style footer */
 .instruction p {
   margin-top: 50px;
   text-align: center;
   font-size: 10px;
   color: lightgray;
   line-height: 20px;
-}
-
-.container {
-  width: 40%;
-  margin: 0 auto;
-}
-
-.container ul {
-  flex-wrap: wrap;
-}
-.container ul li {
-  padding: 10px;
-  background-color: white;
-  border: 1px solid lightgray;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-.container input {
-  padding: 0;
-  padding-left: 10px;
-  background-color: white;
-}
-.btn__text {
-  padding: 0;
-}
-.btn__text:hover {
-  border: none;
-}
-.input__completed {
-  text-decoration: line-through;
-  color: lightgray;
-}
-.container__todo {
-  display: flex;
-  align-items: center;
-}
-.checkbox {
-  width: 30px;
-  height: 30px;
-  background-color: white;
-  border-radius: 50%;
-  vertical-align: middle;
-  border: 1px solid #ddd;
-  -webkit-appearance: none;
-  outline: none;
-}
-.checkbox:checked {
-  background-color: lightgray;
-}
-.btn__del {
-  padding: 0;
-  color: white;
-  font-size: 25px;
-  font-weight: bold;
-}
-.container ul li:hover .btn__del {
-  color: #ecdcdc;
-}
-.container:hover .btn__del:hover {
-  border: none;
-  color: #af5b5e;
-}
-.completed__item {
-  color: lightgray;
-  text-decoration: line-through;
 }
