--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ ul {
 }
 .fa-times {
   padding: 0;
-  padding-right: 10px;
+  padding-right: 20px;
   color: white;
   font-size: 20px;
 }
@@ -41,7 +41,7 @@ header {
 input {
   border: none;
   font-family: Arial, Helvetica, sans-serif;
-  width: 87%;
+  width: 100%;
   font-size: 25px;
   padding: 15px 0px;
 }
@@ -64,7 +64,7 @@ input:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 10px;
+  padding-left: 10px;
   border: none;
   border-bottom: 1px solid lightgray;
   width: 100%;
@@ -88,6 +88,7 @@ input:focus {
 .container p {
   padding: 15px 10px;
   margin-left: 30px;
+  width: 400px;
   word-break: break-all;
 }
 .container ul li:hover .fa-times {
@@ -155,6 +156,7 @@ input:focus {
   font-size: 14px;
   color: gray;
   display: none;
+  border-bottom: 1px solid lightgray;
 }
 p {
   padding-left: 20px;
@@ -189,4 +191,17 @@ button:hover {
   font-size: 10px;
   color: lightgray;
   line-height: 20px;
+}
+#line__ending {
+  display: none;
+}
+.line {
+  margin: 0 auto;
+  width: 38%;
+  height: 5px;
+  background-color: white;
+  border-bottom: 1px solid lightgray;
+}
+.line__two {
+  width: 36%;
 }
